fix pages enumerating and turning